--- a/.github/workflows/continuous_training.yaml
+++ b/.github/workflows/continuous_training.yaml
@@ -21,6 +21,17 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - name: ssh key passphrase
+          uses: appleboy/ssh-action@v0.1.9
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USERNAME }}
+            key: ${{ secrets.KEY }}
+            port: ${{ secrets.PORT }}
+            passphrase: ${{ secrets.PASSPHRASE }}
+            script: |
+              whoami
+              ls -al
       - name: Train model
         env:
           SERVICE_ACCOUNT_KEY: ${{ secrets.SERVICE_ACCOUNT_KEY }}
