--- a/.github/workflows/continuous_training.yaml
+++ b/.github/workflows/continuous_training.yaml
@@ -15,7 +15,7 @@ jobs:
   continuous-training:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout Repo
         uses: actions/checkout@v2
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
