--- a/.github/workflows/continuous_training.yaml
+++ b/.github/workflows/continuous_training.yaml
@@ -52,6 +52,6 @@ jobs:
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cat report.txt >> report.md 
-          cml-comment prediction_behavior.png --md >> report.md
-          cml-send-comment report.md
+          cat report.txt >> report.md
+          echo"![](./prediction_behavior.png)" >> report.md
+          cml comment create report.md
