--- a/.github/workflows/continuous_training.yaml
+++ b/.github/workflows/continuous_training.yaml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
+      - uses: iterative/setup-dvc@v1
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
